Make tile persistent. Whitespace fixes. Fix local buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,7 +28,8 @@ eggs =
     Plone
     Pillow
     jazkarta.abtesttile [test]
-
+zcml =
+    plone.tiles-meta
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
@@ -147,3 +148,12 @@ watchdog = 0.8.3
 z3c.jbot = 0.7.2
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.9
+plone.tiles = 1.8.3
+plone.subrequest = 1.8.1
+plone.app.tiles = 3.0.3
+plone.app.standardtiles = 2.2.0
+plone.app.blocks = 4.1.1
+plone.app.drafts = 1.1.2
+plone.app.mosaic = 2.0rc8
+plone.formwidget.multifile = 2.0
+plone.jsonserializer = 0.9.5
